[project]
name = "qkb"
version = "0.1.0"
description = "QKB Intelligence — Albanian Company Registry Search & Analytics"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "django>=6.0.2",
    "django-environ>=0.12.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.1",
    "social-auth-app-django>=5.7.0",
]
